reserve space for scrollbar to correctly align table column borders

--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableBody.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableBody.module.css
@@ -1,10 +1,14 @@
-.tableBody {
+.tableBodyWrapper {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   border: 2px solid var(--purple-500);
   border-top: none;
   border-radius: 0 0 20px 20px;
-  overflow: auto;
+
+  .tableBody {
+    overflow-y: scroll;
+  }
 }
 
 .row {
